# xobl

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  flake.nix  shell.nix  xobl.opam
compiler/: compile_hir.ml  dune  elaborate.ml  elaborate_masks.ml  elaborate_resolve.ml  elaborate_unions_to_switch.ml  elaboratetree.ml  ext.ml  generate_ocaml.ml  parser.ml  parser_utils.ml  parsetree.ml  pass_declaration_order.ml  pass_fixes.ml  pass_xinput_modifier_mask.ml  size.ml  xobl_compiler.ml
examples/: create_window.ml  create_window_reactor.ml  dune  window_manager.ml  xeyes.ml  xprop_reactor.ml
patche/: combinators.ml  combinators.mli  dune  patche.ml  unordered.ml  xml.ml  xml.mli
src/compiler/: generate_ocaml.ml  hir.ml  pass1_resolve_idents.ml  pass2_remove_unions.ml  pass5_parsetree_to_hir.ml  size.ml  sort_modules.ml
src/core/: dune  xauth.ml  xauth.mli
src/eio/: connection.ml  dune  ring_buffer.ml  ring_buffer.mli
src/lwt/: codec.ml  connection.ml  display_name.ml  dune  reactor.ml  util.ml  x11_types.ml  xauth.mli  xobl_lwt.ml
src/ocaml_backend/: casing.ml  dune  generate_ocaml.ml
src/patche/: combinators.ml  dune  lazy_list.ml
src/protocol/: codec.ml  dune  x11_types.ml
test/: dune  elaborate_masks_output.ml  elaborate_output.expected  elaborate_output.ml  elaborate_resolve_output.expected  elaborate_resolve_output.ml  generate_output.expected  generate_output.ml  hir_output.expected  hir_output.ml  parser_output.expected  parser_output.ml
tests/: dune  generate_ocaml_ast.ml  generate_output.expected  generate_output.ml  hir_output.expected  parser_output.expected
tools/: compile_keysyms.ml  create_window.ml  dune  window_manager.ml  xeyes.ml  xobl_compile.ml
xobl/: codec.ml  connection.ml  display_name.ml  dune  util.ml  xauth.ml  xauth.mli
xobl_compiler/: casing.mli  generate_ocaml.ml  hir.ml  parser.ml  parser_utils.ml  parsetree.ml  pass2_remove_unions.ml  pass4_parsetree_to_hir.ml  pass4_serializable_events.ml  pass5_parsetree_to_hir.ml  xobl_compiler.ml
