(executable
 (name create_window)
 (modules create_window)
 (public_name create-window)
 (libraries xobl lwt.unix))

(executable
 (name window_manager)
 (modules window_manager)
 (public_name window-manager)
 (libraries xobl lwt.unix))

(executable
 (name xeyes)
 (modules xeyes)
 (public_name xeyes)
 (libraries xobl lwt.unix))
