(tests
 (modes byte)
 (names parser_output hir_output)
 (modules parser_output hir_output)
 (libraries xobl.compiler)
 (deps
  (glob_files ../xml-xcb/*.xml)))

(rule
 (deps
  (glob_files ../xml-xcb/*.xml))
 (action
  (with-stdout-to
   generate_output.output
   (pipe-stdout
    (run ./generate_output.exe)
    (run ocamlformat - --impl)))))

(rule
 (alias runtest)
 (action
  (diff generate_output.expected generate_output.output)))

(executable
 (name generate_output)
 (modules generate_output)
 (libraries xobl.compiler))

(executable
 (name generate_ocaml_ast)
 (modules generate_ocaml_ast)
 (libraries xobl.compiler xobl.ocaml_backend))
