(library
 (name xobl)
 (public_name xobl)
 (inline_tests)
 (libraries sexplib lwt.unix)
 (preprocess
  (pps ppx_inline_test ppx_sexp_conv ppx_expect)))

(rule
 (target xproto.ml)
 (deps ../xml-xcb/xproto.xml)
 (action
  (chdir
   %{workspace_root}
   (run %{bin:xobl-compile} --out-dir xobl %{deps}))))
